<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refreshlisting_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/menu_quickread_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"
        android:title="Toggle Multi-Column"/>
     
    
     <item
        android:id="@+id/menu__delete_all_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/action_clear_all"/>
     
     <item android:id="@+id/menu_additionbtn"
        android:showAsAction="always"
        android:title="@string/title_addtweeter" android:icon="@drawable/plus_sign" />

     <item android:id="@+id/menu_load_tweeter_btn"
        android:showAsAction="always"
     	android:visible="false"
        android:title="@string/title_loadtweeters" android:icon="@drawable/bird" />
     
     
      <item android:id="@+id/menu_refresh_btn"
        android:showAsAction="always"
        android:title="@string/title_refresh_listing" android:icon="@drawable/refresh" />
     
</menu>
